change slugify method